--- a/justin/espresso/TestEspressoScratch2/app/build.gradle
+++ b/justin/espresso/TestEspressoScratch2/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '25.0.3'
 
     defaultConfig {
@@ -26,14 +26,35 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:3.+', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:24.+'
-    compile 'junit:junit:4.12'
+//    androidTestCompile('com.android.support.test.espresso:espresso-core:3.+',
+//            'com.applitools:eyes-android-espresso:1.+@aar',
+//            'com.applitools:eyes-android-common:1.+',
+//            'com.applitools:eyes-android-core:1.+')
 
-    compile 'com.applitools:eyes-android-espresso:1.+@aar'
-    compile 'com.applitools:eyes-android-common:1.+'
-    compile 'com.applitools:eyes-android-core:1.+'
+    compile 'com.android.support:appcompat-v7:25.+'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.+')
+
+    androidTestCompile 'com.applitools:eyes-android-espresso:1.+@aar', {
+        exclude group: 'com.squareup.okio', module: 'okio'
+    }
+    androidTestCompile 'com.applitools:eyes-android-common:1.+', {
+        exclude group: 'com.squareup.okio', module: 'okio'
+    }
+    androidTestCompile 'com.applitools:eyes-android-core:1.+', {
+        exclude group: 'com.squareup.okio', module: 'okio'
+    }
+    //compile 'junit:junit:4.12'
+
+    androidTestCompile 'com.squareup.okio:okio:1.13.0'
 
 }
+
+configurations.all {
+    resolutionStrategy.force 'com.android.support:support-annotations:25.+'
+    resolutionStrategy.force 'com.squareup.okio:okio:1.3.0'
+}
+
+//, {
+//exclude group: 'com.android.support', module: 'support-annotations'
+//}
