--- a/justin/espresso/TestEspressoScratch2/app/build.gradle
+++ b/justin/espresso/TestEspressoScratch2/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "com.example.applitools.testespressoscratch2"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,28 +26,15 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    androidTestCompile('com.android.support.test.espresso:espresso-core:3.+',
-//            'com.applitools:eyes-android-espresso:1.+@aar',
-//            'com.applitools:eyes-android-common:1.+',
-//            'com.applitools:eyes-android-core:1.+')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.+',
+            'com.applitools:eyes-android-espresso:1.+@aar',
+            'com.applitools:eyes-android-common:1.+',
+            'com.applitools:eyes-android-core:1.+',
+            'com.android.support:support-annotations:25.+',
+            'com.android.support.test:rules:0.5',
+            'com.android.support.test:runner:0.5')
 
-    compile 'com.android.support:appcompat-v7:25.+'
-
-    androidTestCompile('com.android.support.test.espresso:espresso-core:3.+')
-
-    androidTestCompile 'com.applitools:eyes-android-espresso:1.+@aar', {
-        exclude group: 'com.squareup.okio', module: 'okio'
-    }
-    androidTestCompile 'com.applitools:eyes-android-common:1.+', {
-        exclude group: 'com.squareup.okio', module: 'okio'
-    }
-    androidTestCompile 'com.applitools:eyes-android-core:1.+', {
-        exclude group: 'com.squareup.okio', module: 'okio'
-    }
-    //compile 'junit:junit:4.12'
-
-    androidTestCompile 'com.squareup.okio:okio:1.13.0'
-
+    compile 'com.android.support:appcompat-v7:27.0.2'
 }
 
 configurations.all {
